# lz77

./: CMakeLists.txt  CMakelists.txt  README.md
Include/: suffix_array.h
Sources/: suffix_array.c  suffix_array_example.c  suffix_array_test.c
include/: lcp_array.h  list.h  lz77.h  suffix_array.h  utils.h
src/: CMakeLists.txt  suffix_array.c
src/lcp_array/: lcp_array.c
src/list/: array_list.c
src/lz77/: lz77_block.c  lz77_compress.c  lz77_decompose.c  lz77_decompress.c
src/suffix_array/: lcp_array.c  lpf_array.c  suffix_array.c
src/utils/: utils.c
tests/: CMakeLists.txt  array_list_test_auto.cpp  lcp_array_test_auto.cpp  lpf_array_test_auto.cpp  lpf_array_test_manual.c  suffix_array_test_auto.cpp  suffix_array_test_manual.c
