add_executable(suffix_array_test_manual suffix_array_test_manual.c)
target_include_directories(suffix_array_test_manual PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(suffix_array_test_manual PUBLIC suffix_array)


add_test(NAME "Suffix Array \"banana\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> banana 5 3 1 0 4 2)
add_test(NAME "Suffix Array \"abaa\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> abaa 3 2 0 1)
add_test(NAME "Suffix Array \"aaaa\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> aaaa 3 2 1 0)
add_test(NAME "Suffix Array \"lOrEm iPsUm dOlor Sit\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> "lOrEm iPsUm dOlor Sit" 17 11 5 3 13 1 7 18 9 12 6 19 0 14 10 4 15 16 2 8 20)

add_executable(suffix_array_test_auto suffix_array_test_auto.cpp)
target_include_directories(suffix_array_test_auto PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(suffix_array_test_auto PUBLIC suffix_array)

add_test(NAME "Suffix Array auto n=2 seed=1" COMMAND $<TARGET_FILE:suffix_array_test_auto> 1 2)
add_test(NAME "Suffix Array auto n=2 seed=2" COMMAND $<TARGET_FILE:suffix_array_test_auto> 2 2)
add_test(NAME "Suffix Array auto n=2 seed=3" COMMAND $<TARGET_FILE:suffix_array_test_auto> 3 2)
add_test(NAME "Suffix Array auto n=3 seed=5" COMMAND $<TARGET_FILE:suffix_array_test_auto> 5 3)
add_test(NAME "Suffix Array auto n=3 seed=7" COMMAND $<TARGET_FILE:suffix_array_test_auto> 7 3)
add_test(NAME "Suffix Array auto n=3 seed=8" COMMAND $<TARGET_FILE:suffix_array_test_auto> 8 3)
add_test(NAME "Suffix Array auto n=5 seed=9" COMMAND $<TARGET_FILE:suffix_array_test_auto> 9 5)
add_test(NAME "Suffix Array auto n=8 seed=21" COMMAND $<TARGET_FILE:suffix_array_test_auto> 21 8)
add_test(NAME "Suffix Array auto n=8 seed=37" COMMAND $<TARGET_FILE:suffix_array_test_auto> 37 8)
add_test(NAME "Suffix Array auto n=16 seed=312" COMMAND $<TARGET_FILE:suffix_array_test_auto> 312 16)
add_test(NAME "Suffix Array auto n=1000 seed=4190" COMMAND $<TARGET_FILE:suffix_array_test_auto> 4190 1000)
add_test(NAME "Suffix Array auto n=1000 seed=4390" COMMAND $<TARGET_FILE:suffix_array_test_auto> 4390 1000)
add_test(NAME "Suffix Array auto n=1000 seed=490" COMMAND $<TARGET_FILE:suffix_array_test_auto> 490 1000)
add_test(NAME "Suffix Array auto n=1000 seed=800" COMMAND $<TARGET_FILE:suffix_array_test_auto> 800 1000)
add_test(NAME "Suffix Array auto n=999 seed=799" COMMAND $<TARGET_FILE:suffix_array_test_auto> 799 999)