add_executable(suffix_array_test_manual suffix_array_test_manual.c)
target_include_directories(suffix_array_test_manual PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(suffix_array_test_manual PUBLIC suffix_array)


add_test(NAME "Suffix Array \"banana\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> banana 5 3 1 0 4 2)
add_test(NAME "Suffix Array \"abaa\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> abaa 3 2 0 1)
add_test(NAME "Suffix Array \"aaaa\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> aaaa 3 2 1 0)
add_test(NAME "Suffix Array \"lOrEm iPsUm dOlor Sit\"" COMMAND $<TARGET_FILE:suffix_array_test_manual> "lOrEm iPsUm dOlor Sit" 17 11 5 3 13 1 7 18 9 12 6 19 0 14 10 4 15 16 2 8 20)

add_executable(suffix_array_test_auto suffix_array_test_auto.cpp)
target_include_directories(suffix_array_test_auto PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(suffix_array_test_auto PUBLIC suffix_array)

add_test(NAME "Suffix Array auto n=2 seed=1" COMMAND $<TARGET_FILE:suffix_array_test_auto> 1 2)
add_test(NAME "Suffix Array auto n=2 seed=2" COMMAND $<TARGET_FILE:suffix_array_test_auto> 2 2)
add_test(NAME "Suffix Array auto n=2 seed=3" COMMAND $<TARGET_FILE:suffix_array_test_auto> 3 2)
add_test(NAME "Suffix Array auto n=3 seed=5" COMMAND $<TARGET_FILE:suffix_array_test_auto> 5 3)
add_test(NAME "Suffix Array auto n=3 seed=7" COMMAND $<TARGET_FILE:suffix_array_test_auto> 7 3)
add_test(NAME "Suffix Array auto n=3 seed=8" COMMAND $<TARGET_FILE:suffix_array_test_auto> 8 3)
add_test(NAME "Suffix Array auto n=5 seed=9" COMMAND $<TARGET_FILE:suffix_array_test_auto> 9 5)
add_test(NAME "Suffix Array auto n=8 seed=21" COMMAND $<TARGET_FILE:suffix_array_test_auto> 21 8)
add_test(NAME "Suffix Array auto n=8 seed=37" COMMAND $<TARGET_FILE:suffix_array_test_auto> 37 8)
add_test(NAME "Suffix Array auto n=16 seed=312" COMMAND $<TARGET_FILE:suffix_array_test_auto> 312 16)
add_test(NAME "Suffix Array auto n=1000 seed=4190" COMMAND $<TARGET_FILE:suffix_array_test_auto> 4190 1000)
add_test(NAME "Suffix Array auto n=1000 seed=4390" COMMAND $<TARGET_FILE:suffix_array_test_auto> 4390 1000)
add_test(NAME "Suffix Array auto n=1000 seed=490" COMMAND $<TARGET_FILE:suffix_array_test_auto> 490 1000)
add_test(NAME "Suffix Array auto n=1000 seed=800" COMMAND $<TARGET_FILE:suffix_array_test_auto> 800 1000)
add_test(NAME "Suffix Array auto n=999 seed=799" COMMAND $<TARGET_FILE:suffix_array_test_auto> 799 999)

add_executable(array_list_test_auto array_list_test_auto.cpp)
target_include_directories(array_list_test_auto PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(array_list_test_auto PUBLIC list)

add_test(NAME "Array List seed=1 q=2 max_size=2" COMMAND $<TARGET_FILE:array_list_test_auto> 1 2 2)
add_test(NAME "Array List seed=5 q=2 max_size=2" COMMAND $<TARGET_FILE:array_list_test_auto> 5 2 2)
add_test(NAME "Array List seed=7 q=2 max_size=2" COMMAND $<TARGET_FILE:array_list_test_auto> 7 2 2)
add_test(NAME "Array List seed=2 q=10 max_size=100" COMMAND $<TARGET_FILE:array_list_test_auto> 2 10 100)
add_test(NAME "Array List seed=90 q=10 max_size=100" COMMAND $<TARGET_FILE:array_list_test_auto> 90 10 100)
add_test(NAME "Array List seed=213 q=10 max_size=100" COMMAND $<TARGET_FILE:array_list_test_auto> 213 10 100)
add_test(NAME "Array List seed=30 q=1000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 30 1000 5000)
add_test(NAME "Array List seed=50 q=1000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 50 1000 5000)
add_test(NAME "Array List seed=70 q=1000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 70 1000 5000)
add_test(NAME "Array List seed=90 q=5000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 90 5000 5000)
add_test(NAME "Array List seed=100 q=5000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 100 5000 5000)
add_test(NAME "Array List seed=200 q=5000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 200 5000 5000)
add_test(NAME "Array List seed=201 q=5000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 201 5000 5000)
add_test(NAME "Array List seed=202 q=5000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 202 5000 5000)
add_test(NAME "Array List seed=203 q=5000 max_size=5000" COMMAND $<TARGET_FILE:array_list_test_auto> 203 5000 5000)

add_executable(lcp_array_test_auto lcp_array_test_auto.cpp)
target_include_directories(lcp_array_test_auto PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(lcp_array_test_auto PUBLIC suffix_array)

add_test(NAME "LCP Array seed=1 n=3" COMMAND $<TARGET_FILE:lcp_array_test_auto> 1 3)
add_test(NAME "LCP Array seed=2 n=3" COMMAND $<TARGET_FILE:lcp_array_test_auto> 2 3)
add_test(NAME "LCP Array seed=3 n=3" COMMAND $<TARGET_FILE:lcp_array_test_auto> 3 3)
add_test(NAME "LCP Array seed=4 n=3" COMMAND $<TARGET_FILE:lcp_array_test_auto> 4 3)
add_test(NAME "LCP Array seed=5 n=3" COMMAND $<TARGET_FILE:lcp_array_test_auto> 5 3)
add_test(NAME "LCP Array seed=70 n=100" COMMAND $<TARGET_FILE:lcp_array_test_auto> 70 100)
add_test(NAME "LCP Array seed=90 n=100" COMMAND $<TARGET_FILE:lcp_array_test_auto> 90 100)
add_test(NAME "LCP Array seed=210 n=100" COMMAND $<TARGET_FILE:lcp_array_test_auto> 210 100)
add_test(NAME "LCP Array seed=500 n=1000" COMMAND $<TARGET_FILE:lcp_array_test_auto> 500 1000)
add_test(NAME "LCP Array seed=900 n=2000" COMMAND $<TARGET_FILE:lcp_array_test_auto> 900 2000)
add_test(NAME "LCP Array seed=1000 n=5000" COMMAND $<TARGET_FILE:lcp_array_test_auto> 1000 5000)
add_test(NAME "LCP Array seed=2000 n=100000" COMMAND $<TARGET_FILE:lcp_array_test_auto> 2000 100000)
add_test(NAME "LCP Array seed=3000 n=1000000" COMMAND $<TARGET_FILE:lcp_array_test_auto> 3000 1000000)

add_executable(lpf_array_test_manual lpf_array_test_manual.c)
target_include_directories(lpf_array_test_manual PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(lpf_array_test_manual PUBLIC suffix_array list)

add_test(NAME "LPF Array Manual \"aabaaabbaaabba\"" COMMAND $<TARGET_FILE:lpf_array_test_manual> "aabaaabbaaabba")
add_test(NAME "LPF Array Manual \"aaaaaaaaaaaaaaaa\"" COMMAND $<TARGET_FILE:lpf_array_test_manual> "aaaaaaaaaaaaaaaa")
add_test(NAME "LPF Array Manual \"lOrEM iPSUm dOloR sIt\"" COMMAND $<TARGET_FILE:lpf_array_test_manual> "lOrEM iPSUm dOloR sIt")
add_test(NAME "LPF Array Manual \"to jest losowy tekst pisany w jezyku polskim ktory ma na celu przetestowac popwanosc liczenia tablicy lpf\"" COMMAND $<TARGET_FILE:lpf_array_test_manual> "to jest losowy tekst pisany w jezyku polskim ktory ma na celu przetestowac popwanosc liczenia tablicy lpf")
add_test(NAME "LPF Array Manual \"aabaabaabaabaabaabaabaabaab\"" COMMAND $<TARGET_FILE:lpf_array_test_manual> "aabaabaabaabaabaabaabaabaab")

add_executable(lpf_array_test_auto lpf_array_test_auto.cpp)
target_include_directories(lpf_array_test_auto PUBLIC "${PROJECT_SOURCE_DIR}/include/")
target_link_libraries(lpf_array_test_auto PUBLIC suffix_array list)

add_test(NAME "LPF Array seed=1 n=3" COMMAND $<TARGET_FILE:lpf_array_test_auto> 1 3)
add_test(NAME "LPF Array seed=2 n=3" COMMAND $<TARGET_FILE:lpf_array_test_auto> 2 3)
add_test(NAME "LPF Array seed=3 n=3" COMMAND $<TARGET_FILE:lpf_array_test_auto> 3 3)
add_test(NAME "LPF Array seed=50 n=5" COMMAND $<TARGET_FILE:lpf_array_test_auto> 50 5)
add_test(NAME "LPF Array seed=60 n=5" COMMAND $<TARGET_FILE:lpf_array_test_auto> 60 5)
add_test(NAME "LPF Array seed=70 n=5" COMMAND $<TARGET_FILE:lpf_array_test_auto> 70 5)
add_test(NAME "LPF Array seed=90 n=5" COMMAND $<TARGET_FILE:lpf_array_test_auto> 90 5)
add_test(NAME "LPF Array seed=102 n=5" COMMAND $<TARGET_FILE:lpf_array_test_auto> 102 5)
add_test(NAME "LPF Array seed=105 n=10" COMMAND $<TARGET_FILE:lpf_array_test_auto> 105 10)
add_test(NAME "LPF Array seed=109 n=10" COMMAND $<TARGET_FILE:lpf_array_test_auto> 109 10)
add_test(NAME "LPF Array seed=100 n=100" COMMAND $<TARGET_FILE:lpf_array_test_auto> 100 100)
add_test(NAME "LPF Array seed=200 n=200" COMMAND $<TARGET_FILE:lpf_array_test_auto> 200 200)
add_test(NAME "LPF Array seed=300 n=200" COMMAND $<TARGET_FILE:lpf_array_test_auto> 300 200)
add_test(NAME "LPF Array seed=500 n=200" COMMAND $<TARGET_FILE:lpf_array_test_auto> 500 200)
add_test(NAME "LPF Array seed=700 n=200" COMMAND $<TARGET_FILE:lpf_array_test_auto> 700 200)
add_test(NAME "LPF Array seed=900 n=1000" COMMAND $<TARGET_FILE:lpf_array_test_auto> 900 1000)
add_test(NAME "LPF Array seed=1000 n=2000" COMMAND $<TARGET_FILE:lpf_array_test_auto> 1000 2000)
add_test(NAME "LPF Array seed=1023 n=1999" COMMAND $<TARGET_FILE:lpf_array_test_auto> 1023 1999)
add_test(NAME "LPF Array seed=12346 n=2001" COMMAND $<TARGET_FILE:lpf_array_test_auto> 12346 2001)
add_test(NAME "LPF Array seed=919 n=2000" COMMAND $<TARGET_FILE:lpf_array_test_auto> 919 2000)